[package]
name = "cryptographic_primitives"
version = "0.2.0"
authors = ["Razvan-Andrei Perial <razvanperial@gmail.com>"]
edition = "2021"
description = "A crate that provides cryptographic primitives."
license = "MIT"
repository = "https://github.com/razvanperial/cryptographic_primitives"

[dependencies]
bitvec = "1.0.1"
hmac = "0.12.1"
sha2 = "0.10.8"
